--- a/4. Membangun Aplikasi di Docker/compose/nginx/nginx-frontend.conf
+++ b/4. Membangun Aplikasi di Docker/compose/nginx/nginx-frontend.conf
@@ -6,21 +6,13 @@ events {
 
 http {
 
-    upstream backend {
-        server backend:5000;
-    }
-
     upstream frontend {
         server frontend:3000;
     }
 
     server {
         listen 80;
-	server_name docker.mohammadtauchid.com www.docker.mohammadtauchid.com
-
-        location /api/v1 {
-            proxy_pass http://backend;
-        }
+        server_name docker.mohammadtauchid.com www.docker.mohammadtauchid.com;
 
         location / {
             proxy_pass http://frontend;
