--- a/4. Membangun Aplikasi di Docker/compose/nginx/nginx-backend.conf
+++ b/4. Membangun Aplikasi di Docker/compose/nginx/nginx-backend.conf
@@ -11,8 +11,8 @@ http {
     }
 
     server {
-        listen 80;
-        server_name api-docker.mohammadtauchid.com;
+        listen 8080;
+        server_name localhost;
 
         location / {
             proxy_pass http://backend;
