--- a/4. Membangun Aplikasi di Docker/compose/nginx/nginx-frontend.conf
+++ b/4. Membangun Aplikasi di Docker/compose/nginx/nginx-frontend.conf
@@ -12,7 +12,7 @@ http {
 
     server {
         listen 80;
-        server_name docker.mohammadtauchid.com www.docker.mohammadtauchid.com;
+        server_name localhost;
 
         location / {
             proxy_pass http://frontend;
